--- a/CSS/Projeto/styles.css
+++ b/CSS/Projeto/styles.css
@@ -6,6 +6,8 @@
 
 :root {
     font-size: 62.5%;
+    --default-border: 0.1rem solid rgba(0, 0, 0, 0.15);
+    --border-radius: 1.2rem;
 }
 
 body {
@@ -45,9 +47,10 @@ aside h1 span, main h2 span {
 main {
     width: 60rem;
     height: 52rem;
-    border: 0.1rem solid rgba(0, 0, 0, 0.15);
+    border: var(--default-border);
     padding: 4.4rem 5.7rem;
-    border-radius: 1.2rem;
+    border-radius: var(--border-radius);
+    position: relative;
 }
 
 main h2 {
@@ -62,7 +65,7 @@ main .actions {
 }
 
 main .actions a {
-    border-radius: 1.2rem;
+    border-radius: var(--border-radius);
     text-decoration: none;
     font-size: 2.4rem;
     height: 5.5rem;
@@ -72,12 +75,23 @@ main .actions a {
     justify-content: center;
     align-items: center;
     color: #FFF;
-    margin-top: 5.4rem;
+    margin-top: 3rem;
 }
 
 main .actions a + a {
     background-color: #FF5678;
     margin-top: 4.8rem;
+}
+
+main header {
+    display: flex;
+    gap: 1.2rem;
+    align-items: center;
+}
+
+main header a {
+    font-size: 2.8rem;
+    color: #FF5678;
 }
 
 main footer p {
@@ -91,4 +105,56 @@ main footer a {
     display: block;
     text-align: center;
     color: #000000;
+}
+
+main form label {
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: lowercase;
+    margin-bottom: 1rem;
+    display: block;
+    margin-top: 1.6rem;
+}
+
+main form :is(input, select){
+    width: 48.9rem;
+    height: 5.5rem;
+    display: block;
+
+    background: #FFFFFF;
+    border: var(--default-border);
+    border-radius: var(--border-radius);
+}  
+
+main form select{
+    color: #32cfca;
+}
+
+main form .select-div {
+    position: relative;
+}
+
+main form .select-div::after {
+    top: 0;
+    left: 0;    
+    background-color: #32cfca;
+    content: "<ion-icon name="arrow-dropdown"></ion-icon>";
+    position: absolute;
+    z-index: 1;
+}
+
+.points {
+    position: relative;
+
+}
+
+main form input + button {
+    position: absolute;
+    right: -3.8rem;
+    top: calc(2.7rem + 2.2rem);
+    background-color: transparent;
+    border: none;
+    color: #32cfca;
+    font-size: 2.4rem;
+    cursor: pointer;
 }
